# labs_rksi

./: .clang-format  .gitignore  CMakeLists.txt  README.md
work_7/: CMakeLists.txt  main.cpp  program.h
work_7/src/: program.cpp
work_8/: CMakeLists.txt  main.cpp  square_matrix.h
work_8/tests/: square_matrix_test.cpp
work_9/: CMakeLists.txt  main.cpp  program.cpp  program.h
